IGNITE-843: WIP: tables.

--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -143,7 +143,7 @@
 }
 
 .theme-line #category-columns ul li a {
-  padding: 4px 0;
+  padding: 5px 0;
   display: block;
   font-size: 16px;
 }
@@ -184,11 +184,11 @@
 
 .theme-line .main-content .nav-horizontal a:hover {
   color: #999;
-  border-bottom: 4px solid #ddd;
+  border-bottom: 5px solid #ddd;
 }
 
 .theme-line .main-content .nav-horizontal a.active {
-  border-bottom: 4px solid #888;
+  border-bottom: 5px solid #888;
 }
 
 .theme-line .navbar-nav, .theme-line .sidebar-nav {
@@ -279,7 +279,7 @@
 }
 
 .theme-line .suggest {
-  padding: 4px;
+  padding: 5px;
   display: inline-block;
   font-size: 12px;
 }
@@ -623,7 +623,7 @@ h1.ignite-logo {
 
   input[type="checkbox"] {
     line-height: 20px;
-    margin-right: 4px;
+    margin-right: 5px;
   }
 
   .checkbox label {
@@ -633,7 +633,7 @@ h1.ignite-logo {
 }
 
 button {
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 h1,
@@ -803,7 +803,7 @@ button .caret, .btn .caret {
 
   padding: 0;
 
-  border-radius: 4px;
+  border-radius: 5px;
   border: thin dotted lightgrey;
 }
 
@@ -1052,7 +1052,7 @@ a {
 
 .block-callout {
   background-color: @ignite-block-callout-background;
-  border-left-width: 4px;
+  border-left-width: 5px;
   border-left-style: solid;
   border-color: @ignite-block-callout-border;
 
@@ -1080,12 +1080,24 @@ a {
   }
 }
 
-.grid-cell {
+.grid-cell-1 {
+  flex-basis: 100%;
+}
+
+.grid-cell-2 {
   flex-basis: 50%;
+}
+
+.grid-cell-3 {
+  flex-basis: 33%;
 }
 
 .grid-cell-4 {
   flex-basis: 25%;
+}
+
+.grid-cell-fa {
+  flex-basis: 16px;
 }
 
 .grid-fixed-cell {
