# ignite-843 Fixed layout for metadata.

--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -860,6 +860,12 @@ label {
   margin-left: 5px;
 }
 
+.fieldSep {
+  float: right;
+  line-height: @input-height;
+  margin: 0 5px;
+}
+
 .fieldButton {
   float: right;
   margin-left: 5px;
@@ -1066,42 +1072,6 @@ a {
 .ace_editor, #ace_document {
   width: 100%;
   height: 400px;
-}
-
-.grid {
-  display: flex;
-  flex-wrap: nowrap;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  label {
-    line-height: @input-height;
-  }
-}
-
-.grid-cell-1 {
-  flex-basis: 100%;
-}
-
-.grid-cell-2 {
-  flex-basis: 50%;
-}
-
-.grid-cell-3 {
-  flex-basis: 33%;
-}
-
-.grid-cell-4 {
-  flex-basis: 25%;
-}
-
-.grid-cell-fa {
-  flex-basis: 16px;
-}
-
-.grid-fixed-cell {
-  flex-basis: 10px;
 }
 
 
